# ChangeLog for dev-ruby/chronic
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/chronic/ChangeLog,v 1.13 2013/09/09 02:53:05 mrueg Exp $

*chronic-0.10.2 (07 Oct 2013)

  07 Oct 2013;  <p@p8952.info> +chronic-0.10.2.ebuild:
  version bump to 0.10.2

  09 Sep 2013; Manuel Rüger <mrueg@gentoo.org> -chronic-0.6.7.ebuild,
  -chronic-0.7.0.ebuild, -chronic-0.9.0.ebuild:
  Cleanup old.

*chronic-0.9.1 (28 Feb 2013)

  28 Feb 2013; Hans de Graaff <graaff@gentoo.org> +chronic-0.9.1.ebuild:
  Version bump.

*chronic-0.9.0 (02 Feb 2013)

  02 Feb 2013; Hans de Graaff <graaff@gentoo.org> +chronic-0.9.0.ebuild:
  Version bump.

*chronic-0.7.0 (05 Aug 2012)

  05 Aug 2012; Hans de Graaff <graaff@gentoo.org> +chronic-0.7.0.ebuild:
  Version bump.

  20 Jun 2012; Hans de Graaff <graaff@gentoo.org> chronic-0.6.7.ebuild:
  Avoid built-time dependency on git, bug 422669.

  20 Jun 2012; Hans de Graaff <graaff@gentoo.org> -chronic-0.6.4.ebuild,
  -chronic-0.6.4-r1.ebuild, -chronic-0.6.6.ebuild:
  Remove old versions.

*chronic-0.6.7 (07 Apr 2012)

  07 Apr 2012; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.7.ebuild:
  Version bump.

  07 Mar 2012; Naohiro Aota <naota@gentoo.org> chronic-0.6.6.ebuild:
  Add ~x86-fbsd

*chronic-0.6.6 (17 Dec 2011)

  17 Dec 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.6.ebuild:
  Version bump. Drop rbx until problems with it have been resolved.

*chronic-0.6.4-r1 (21 Oct 2011)

  21 Oct 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.4-r1.ebuild:
  Add rbx support.

  21 Oct 2011; Hans de Graaff <graaff@gentoo.org> -chronic-0.6.2.ebuild:
  Remove old version.

*chronic-0.6.4 (10 Sep 2011)

  10 Sep 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.4.ebuild:
  Version bump.

*chronic-0.6.2 (20 Aug 2011)

  20 Aug 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.2.ebuild,
  +metadata.xml: